# test-cmake

./: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/libs/calculation/: CMakeLists.txt  calculation.cpp  calculation.h  calculation_global.h
src/test/test_calculation/: CMakeLists.txt  tst_calculation.cpp  tst_test_sum_of_elements.cpp
